change cors config
