# docs/swagger/swagger.yaml
@@ -173,18 +173,48 @@ paths:
       summary: 获取用户信息
       tags:
       - user
-  /user/name:
+  /user/avatar:
     patch:
       consumes:
-      - application/json
-      description: 修改当前登录用户基本信息(如：账户昵称)
+      - multipart/form-data
+      description: 修改当前登录用户头像
       parameters:
       - description: 认证 Token 值
         in: header
         name: Authorization
         required: true
         type: string
-      - description: 修改用户信息请求参数
+      - description: 用户头像请求参数
+        in: formData
+        name: avatar
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"status":200, "code": 2000001, msg:"请求处理成功"}'
+          schema:
+            type: string
+        "500":
+          description: '{"status":500, "code": 5000001, msg:"服务器内部错误"}'
+          schema:
+            type: string
+      summary: 修改用户头像
+      tags:
+      - user
+  /user/name:
+    patch:
+      consumes:
+      - application/json
+      description: 修改当前登录用户昵称
+      parameters:
+      - description: 认证 Token 值
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 修改用户名称请求参数
         in: body
         name: body
         required: true
@@ -202,7 +232,7 @@ paths:
           description: '{"status":500, "code": 5000001, msg:"服务器内部错误"}'
           schema:
             type: string
-      summary: 编辑用户信息
+      summary: 编辑用户昵称
       tags:
       - user
   /user/pass:
